@@ -1654,7 +1654,6 @@ CTextEditZoomEnabler>QLabel {
   background-color: transparent;
 }
 
-
 /*
  ----- QHeaderView
 */
