@@ -160,6 +160,16 @@ QTabBar::tab:!selected {
   margin-top: 2px; /* make non-selected tabs look smaller */
 }
 
+QTabBar::tab:disabled {
+  min-width: 0px;
+  max-width: 0px;
+  border: none;
+  border-radius: 0px;
+  padding: 0px;
+  color: rgba(0,0,0,0);
+  background-color: rgba(0,0,0,0);
+}
+
 /*
  ----- QLabel, QToolTip, CTitleLabel
 */
@@ -252,6 +262,7 @@ QPushButton, QToolButton {
 }
 
 QPushButton[styleSmall="true"],
+QToolButton[styleSmall="true"],
 MRichTextEdit QToolButton {
   padding: 0px;
   min-width: 24px;
@@ -278,6 +289,11 @@ COverlayButton>CShortcutButton {
 }
 
 CDownloadButtonOverlay>CShortcutButton {
+  min-width: 64px;
+  min-height: 48px;
+  max-width: 64px;
+  max-height: 48px;
+  padding: -2px;
   qproperty-iconSize: 24px;
 }
 
@@ -1012,12 +1028,28 @@ COverlayBase {
   border-radius: 10px;
   padding: 5px;
 }
-COverlayBase#HelpButtonOverlay {
+COverlayBase#HelpButtonOverlay,
+COverlayBase#DownloadButtonOverlay {
   color: transparent;
   background-color: transparent;
   border: none;
   border-radius: 0px;
   padding: 0;
+}
+
+CTextEditZoomEnabler {
+  border-radius: 0px;
+  border-image: url(ui/WindowBG.png) 50 50 50 50 repeat repeat;
+  border-top: 20px transparent;
+  border-bottom: 20px transparent;
+  border-right: 20px transparent;
+  border-left: 20px transparent;
+  padding: 0;
+}
+
+CTextEditZoomEnabler>QLabel {
+  color: white;
+  background-color: transparent;
 }
 
 /*
@@ -1219,4 +1251,9 @@ CResourceDetailView {
   qproperty-iconFile: url(ui/FileIcon.png);
   qproperty-iconFolder: url(ui/FolderIcon.png);
   qproperty-spacing: 6;
+}
+
+CResourceModelView {
+  qproperty-cardIcon: url(ui/ButtonTitleCard.png);
+  qproperty-cardIconSize: 16;
 }
